@@ -2,6 +2,9 @@ debian-installer (20031224) UNRELEASED; urgency=low
 
   * Thiemo Seufer
     - "make reallyclean" should really clean.
+  * Kenshi Muto
+    - Add "getallpo.sh" and run this in Makefile. This program collects
+      all of po messages and dump to po.utf. po.utf will merge into all-*.utf.
 
  -- Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>  Wed, 24 Dec 2003 15:38:45 +0100
 
